--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -43,3 +43,20 @@ button {
   background-color: var(--color-accent);
   border: 1px solid var(--color-border);
 }
+
+.pop-animation {
+  animation: popout both;
+  transition: all 0.7s;
+  animation-timeline: view(70% 5%);
+}
+
+@keyframes popout {
+  from {
+    opacity: 0;
+    transform: translateY(200px) scale(0.3);
+  }
+  to {
+    transform: translateY(0) scale(1);
+    opacity: 1;
+  }
+}
